# SandboxTetris

./: CMakeLists.txt  main.cpp  pieces.txt
